--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -302,13 +302,12 @@
     <a class="skip-to-content-link button visually-hidden" href="#MainContent">
       {{ 'accessibility.skip_to_text' | t }}
     </a>
-    <h1>Hello World</h1>
     {%- if settings.cart_type == 'drawer' -%}
       {%- render 'cart-drawer' -%}
     {%- endif -%}
 
     {% sections 'header-group' %}
-
+    {% render 'my-snippet', product: product %}
     <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
       {{ content_for_layout }}
     </main>
