Se añadió la sección 'featured-products-custom' y se implementó el 'product-card' para mostrar productos destacados. Se creó un nuevo CSS para el estilo de las tarjetas de producto y se incorporó un botón personalizado 'button-3ah'. Además, se realizaron ajustes en el banner de imagen y se actualizaron los estilos de la sección de promociones.

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
+    {{ 'product-card.css' | asset_url | stylesheet_tag }}
     <link rel="canonical" href="{{ canonical_url }}">
 
     {%- if settings.favicon != blank -%}
@@ -306,8 +307,7 @@
       {%- render 'cart-drawer' -%}
     {%- endif -%}
 
-    {% sections 'header-group' %}
-    {% render 'my-snippet', product: product %}
+{% comment %}     {% sections 'header-group' %} {% endcomment %}
     <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
       {{ content_for_layout }}
     </main>
