Se añadieron estilos para el logo de GUCCI en la sección de banner de imagen, incluyendo animaciones al hacer scroll. Se mejoró el encabezado con transiciones de color y fondo al desplazarse. Además, se ajustaron estilos en el CSS base y se añadió un padding en el banner para mejorar la presentación.

--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -8,6 +8,7 @@
 
 .banner__box {
   text-align: center;
+  padding-bottom: 16px;
 }
 
 /* Needed for gradient continuity with or without animation, the transform scopes the gradient to its container which happens already when animation are turned on */
